# opengl_exp

./: .gitignore  1.hello.cpp  README  meson.build
include/: matrix_gles.h  shader.h  shader_gles.h
src/: 1.hello.cpp  10.images_gles.cpp  10.images_gles.vs  11.carousel_gles.cpp  11.carousel_gles.vs  2.shader.vs  2.shaders.cpp  3.texture.fs  3.texture.vs  3.textures.cpp  4.transformations.cpp  4.transformations.vs  5.coordinate_sys.cpp  5.coordinate_sys.fs  5.coordinate_sys.vs  6.camera.cpp  6.camera.fs2  6.camera.vs  7.opengles.cpp  7.opengles.fs  8.vbo_gles.cpp  8.vbo_gles.vs  9.rotate_gles.cpp  9.rotate_gles.fs  9.rotate_gles.vs  second_try.cpp
